WEB-535 Its not center aligned & In Landscape the pop-up is hardly showing up bug fixed

--- a/src/app/pages/install/install.component.scss
+++ b/src/app/pages/install/install.component.scss
@@ -2,6 +2,9 @@
     height: calc(100vh - 180px);
     align-items: center;
     overflow-y: scroll;
+    @media (max-width: 1200px) {
+        height: calc(100vh - 80px);
+    }
 }
 
 .h100::-webkit-scrollbar {
